--- a/about.html
+++ b/about.html
@@ -32,26 +32,34 @@
 		</head>
 
 		<body>
-		  <header id="header">
-		    <div class="container main-menu">
-		    	<div class="row align-items-center justify-content-between d-flex">
-			      <div class id="logo">
+			<header id="header">
+				<div class="container main-menu">
+					<div class="row align-items-center justify-content-between d-flex">
+						<div class id="logo">
 							<a href="index.html"><h3>H. Jansma </h3></a>
 					 </div>
-			      <nav id="nav-menu-container">
-			        <ul class="nav-menu">
-			          <li><a href="index.html">Home</a></li>
-			          <li><a href="about.html">About</a></li>
-			          <li><a href="portfolio.html">Portfolio</a></li>
+						<nav id="nav-menu-container">
+							<ul class="nav-menu">
+								<li><a href="index.html">Home</a></li>
+								<li><a href="about.html">About</a></li>
 
 
-			          <li><a href="contact.html">Contact</a></li>
+								<li class="menu-has-children"><a>Portfolio</a>
+									<ul style="display: none;">
+										<li><a href="portfolio.html">Featured Projects</a></li>
+										<li><a href="archive.html">Projects Archive</a></li>
+
+									</ul>
+								</li>
+
+
+								<li><a href="contact.html">Contact</a></li>
 								</ul>
-			        </ul>
-			      </nav><!-- #nav-menu-container -->
-		    	</div>
-		    </div>
-		  </header><!-- #header -->
+							</ul>
+						</nav><!-- #nav-menu-container -->
+					</div>
+				</div>
+			</header><!-- #header -->
 
 			<!-- start banner Area -->
 			<section class="about-banner">
@@ -95,9 +103,17 @@
 					</div>
 
 
+					<hr>
 
-						<div class="section-top-border">
-							<h2> Tools Expertisse </h2>
+
+					<div class="section-top-border">
+							<div class="text-center">
+									<div class="menu-content pb-40">
+											<div class="title text-center">
+													<h1 class="mb-10">Skills Expertisse</h1>
+											</div>
+									</div>
+							</div>
 
 
 
@@ -132,7 +148,6 @@
 
 
 						<div class="col-lg-6 skill-right">
-
 							<div class="single-skill">
 								<p>
 									GitHub 85%
@@ -142,9 +157,9 @@
 
 							<div class="single-skill">
 								<p>
-									Linux 80%
+									Linux 70%
 								</p>
-								<div class="skill" data-width="80"></div>
+								<div class="skill" data-width="70"></div>
 							</div>
 							<div class="single-skill">
 								<p>
@@ -152,21 +167,21 @@
 								</p>
 								<div class="skill" data-width="60"></div>
 							</div>
-
-
-
-
 						</div>
+
 					</div>
 				</div>
+				</div>
 			</section>
-		</div>
+
 			<!-- End home-about Area -->
+<hr>
+<br>
 
 			<!-- Start timeline Area -->
 			<section class="timeline pb-120">
             <div class="text-center">
-                <div class="menu-content pb-70">
+                <div class="menu-content pb-40">
                     <div class="title text-center">
                         <h1 class="mb-10">My Experience</h1>
                     </div>
@@ -203,9 +218,72 @@
 			    </li>
 			  </ul>
 			</section>
+			<hr>
+			<br>
 
 			<!-- End timeline Area -->
+			<section class="faq-area pb-120">
+							<div class="container">
+								<div class="row d-flex justify-content-center">
+									<div class="menu-content pb-40 col-lg-8">
+										<div class="title text-center">
+											<h1 class="mb-10">Any Questions?</h1>
+										</div>
+									</div>
+								</div>
+								<div class="row justify-content-center">
+									<div class="col-lg-8">
+									<dl class="accordion">
+										<dt>
+											<a href="" class="active">Why did you make this website?</a>
+										</dt>
+										<dd style="display: block;">
+										This is dummy answer.
+										</dd>
 
+										<dt>
+											<a href="">How long have you been practicing machine learning?</a>
+										</dt>
+										<dd style="display: none;">
+										Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis. leo quam aliquet diam, congue laoreet elit metus eget diam.
+										</dd>
+
+										<dt>
+											<a href="">Do you have any experience with database management?</a>
+										</dt>
+										<dd style="display: none;">
+										Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. Proin ac metus diam.
+										</dd>
+
+
+										<dt>
+											<a href="">Why are you interested in computer vision / machine learning?</a>
+										</dt>
+										<dd style="display: none;">
+										Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. Proin ac metus diam.
+										</dd>
+
+
+										<dt>
+											<a href="">What industry are you looking to work in?</a>
+										</dt>
+										<dd style="display: none;">
+										Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. Proin ac metus diam.
+										</dd>
+
+
+									<dt>
+										<a href="">How can I get in contact with you?</a>
+									</dt>
+									<dd style="display: none;">
+									Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. Proin ac metus diam.
+									</dd>
+								</dl>
+
+									</div>
+								</div>
+							</div>
+						</section>
 
 
 
