--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,15 @@
 			        <ul class="nav-menu">
 			          <li><a href="index.html">Home</a></li>
 			          <li><a href="about.html">About</a></li>
-			          <li><a href="portfolio.html">Portfolio</a></li>
+
+
+								<li class="menu-has-children"><a>Portfolio</a>
+			            <ul style="display: none;">
+		            	  <li><a href="portfolio.html">Featured Projects</a></li>
+										<li><a href="archive.html">Projects Archive</a></li>
+
+			            </ul>
+			          </li>
 
 
 			          <li><a href="contact.html">Contact</a></li>
@@ -89,7 +97,7 @@
 									<span class="lnr lnr-phone-handset"></span>
 								</div>
 								<div class="contact-details">
-									<h5>(210) 251 - 1512</h5>
+									<h5>(210) 251-1512</h5>
 									<p></p><br>
 								</div>
 							</div>
