--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								<li class="menu-has-children"><a>Portfolio</a>
 			            <ul style="display: none;">
 		            	  <li><a href="portfolio.html">Featured Projects</a></li>
-										<li><a href="portfolio.html">Projects Archive</a></li>
+										<li><a href="archive.html">Projects Archive</a></li>
 
 			            </ul>
 			          </li>
@@ -105,6 +105,8 @@
 			</section>
 			<!-- End home-about Area -->
 
+
+
 			<!-- Start services Area -->
 			<section class="services-area section-gap">
 				<div class="container">
@@ -121,7 +123,7 @@
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
 								<span class="lnr lnr-chart-bars"></span>
-								<a href="#"><h4>Data Analytics</h4></a>
+								<a><h4>Data Analytics</h4></a>
 								<p>
 									The first step in building amazing machine learning applications is collecting and understanding the data.
 								</p>
@@ -131,7 +133,7 @@
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
 								<span class="lnr lnr-eye"></span>
-								<a href="#"><h4>Computer Vision</h4></a>
+								<a><h4>Computer Vision</h4></a>
 								<p>
 									I build intelligent systems that can understand, describe, and interact with the world.
 								</p>
@@ -141,7 +143,7 @@
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
 								<span class="lnr lnr-graduation-hat"></span>
-								<a href="#"><h4>Machine Learning</h4></a>
+								<a><h4>Machine Learning</h4></a>
 								<p>
 									I have a deep understanding of the mathematics and best practices that make machine learning applicable to the world.
 								</p>
@@ -152,7 +154,7 @@
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
 								<span class="lnr lnr-cloud-check"></span>
-								<a href="#"><h4>Cluster Computing</h4></a>
+								<a><h4>Cluster Computing</h4></a>
 								<p>
 									I maintain my own DigitalOcean servers, and use them as a hub for model training and deployment.
 								</p>
@@ -161,7 +163,7 @@
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
 								<span class="lnr lnr-laptop-phone"></span>
-								<a href="#"><h4>Web App Design</h4></a>
+								<a><h4>Web App Design</h4></a>
 								<p>
 									The modularity of web applications is perfect for communicating with a containerized machine learning model.
 								</p>
@@ -170,7 +172,7 @@
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
 								<span class="lnr lnr-database"></span>
-								<a href="#"><h4>Backend Design</h4></a>
+								<a><h4>Backend Design</h4></a>
 								<p>
 									Knowing how to make your models interface with existing systems is a crucial and often overlooked skill.
 								</p>
@@ -184,58 +186,260 @@
 
 
 
+<section class="home-about-area section-gap">
+
+		<div class="text-center">
+				<div class="menu-content pb-40">
+						<div class="title text-center">
+								<h1 class="mb-10">Skills Expertisse</h1>
+						</div>
+				</div>
+		</div>
 
 
-						<!-- start footer Area -->
-						<footer class="footer-area section-gap">
-								<div class="container">
-										<div class="row">
-												<div class="col-lg-5 col-md-6 col-sm-6">
-														<div class="single-footer-widget">
-																<h4>About Me</h4>
-																<p>
-																		Passionate about computer vision, web app design, and making amazing things. I love to learn, and have a 2 year old german shephard.
-																</p>
-																<p class="footer-text"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+
+
+
+
+
+<div class="container">
+
+<div class="row skillbar-wraps">
+	<div class="col-lg-6 skill-left">
+		<div class="single-skill">
+			<p>
+				Python 90%
+			</p>
+			<div class="skill" data-width="90"></div>
+		</div>
+		<div class="single-skill">
+			<p>
+				Tensorflow / Scikit-Learn 80%
+			</p>
+			<div class="skill" data-width="80"></div>
+		</div>
+		<div class="single-skill">
+			<p>
+				JavaScript / HTML / CSS 50%
+			</p>
+			<div class="skill" data-width="50"></div>
+		</div>
+
+	</div>
+
+
+	<div class="col-lg-6 skill-right">
+		<div class="single-skill">
+			<p>
+				GitHub 85%
+			</p>
+			<div class="skill" data-width="85"></div>
+		</div>
+
+		<div class="single-skill">
+			<p>
+				Linux 70%
+			</p>
+			<div class="skill" data-width="70"></div>
+		</div>
+		<div class="single-skill">
+			<p>
+				Docker 60%
+			</p>
+			<div class="skill" data-width="60"></div>
+		</div>
+	</div>
+
+</div>
+
+</section>
+
+
+
+
+			<section class="portfolio-area section-gap" id="portfolio">
+					<div class="container">
+					<div class="row d-flex justify-content-center">
+							<div class="menu-content pb-30 col-lg-8">
+									<div class="title text-center">
+											<h1 class="mb-10">My Latest Projects</h1>
+											<p>Take a look at my recent work.</p>
+									</div>
+							</div>
+					</div>
+
+							<div class="filters">
+									<ul>
+											<li class="active" data-filter="*">All</li>
+											<li data-filter=".ComputerVision">Computer Vision</li>
+											<li data-filter=".NLP">NLP</li>
+											<li data-filter=".WebApps">Web Apps</li>
+											<li data-filter=".DataScience">Data Science</li>
+									</ul>
+							</div>
+
+							<div class="filters-content">
+									<div class="row grid">
+											<div class="single-portfolio col-sm-4 all ComputerVision">
+												<div class="relative">
+													<div class="thumb">
+														<div class="overlay overlay-bg"></div>
+														 <img class="image img-fluid" src="img/hucklecover2.png" alt="">
+													</div>
+						<a href="GAP.html">
+							<div class="middle">
+								<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
+							</div>
+					</a>
+												</div>
+					<div class="p-inner">
+						<a href="GAP.html">
+							<h4>GAP: Object Localization</h4></a>
+						<div class="cat">July 16, 2018</div>
+					</div>
+											</div>
+											<div class="single-portfolio col-sm-4 all NLP">
+												<div class="relative">
+													<div class="thumb">
+														<div class="overlay overlay-bg"></div>
+														 <img class="image img-fluid" src="img/applesquare.jpg" alt="">
+													</div>
+						<a href="apple.html">
+							<div class="middle">
+								<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
+							</div>
+					</a>
+												</div>
+					<div class="p-inner">
+						<a href="apple.html">
+							<h4>Apple Sentiment Analysis</h4></a>
+						<div class="cat">June 20, 2018</div>
+					</div>
+											</div>
+
+
+											<div class="single-portfolio col-sm-4 all NLP">
+												<div class="relative">
+													<div class="thumb">
+														<div class="overlay overlay-bg"></div>
+														 <img class="image img-fluid" src="img/gassquare.jpg" alt="">
+													</div>
+						<a href="toxic.html">
+							<div class="middle">
+								<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
+							</div>
+						</a>
+												</div>
+													<div class="p-inner">
+														<a href="toxic.html">
+															<h4>Toxic Topic Modelling</h4></a>
+															<div class="cat">June 13, 2018</div>
+													</div>
+											</div>
+
+
+											<div class="single-portfolio col-sm-4 all DataScience">
+												<div class="relative">
+													<div class="thumb">
+														<div class="overlay overlay-bg"></div>
+														 <img class="image img-fluid" src="img/clustering.png" alt="">
+													</div>
+						<a href="Clustering.html">
+							<div class="middle">
+								<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
+							</div>
+						</a>
+												</div>
+													<div class="p-inner">
+														<a href="Clustering.html">
+															<h4>Clustering Mental Health</h4></a>
+															<div class="cat">May 23, 2018</div>
+													</div>
+											</div>
+
+
+											<div class="single-portfolio col-sm-4 all DataScience">
+												<div class="relative">
+												<div class="thumb">
+														<div class="overlay overlay-bg"></div>
+														 <img class="image img-fluid" src="img/titanicsquare.jpg" alt="">
+													</div>
+						<a href="Titanic.html">
+							<div class="middle">
+								<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
+							</div>
+						</a>
+												</div>
+													<div class="p-inner">
+														<a href="Titanic.html">
+															<h4>Data Science Lifecycle</h4></a>
+															<div class="cat">May 3, 2018</div>
+													</div>
+											</div>
+
+									</div>
+							</div>
+
+					</div>
+
+					<div class="container text-right">
+					<a href="archive.html" class="primary-btn text-uppercase">Project Archive</a>
+				</div>
+			</section>
+			<!-- End portfolio-area Area -->
+
+
+
+			<!-- start footer Area -->
+			<footer class="footer-area section-gap">
+					<div class="container">
+							<div class="row">
+									<div class="col-lg-5 col-md-6 col-sm-6">
+											<div class="single-footer-widget">
+													<h4>About Me</h4>
+													<p>
+															Passionate about computer vision, web app design, and making amazing things. I love to learn, and have a 2 year old german shephard.
+													</p>
+													<p class="footer-text"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-														</div>
-												</div>
-												<div class="col-lg-5 col-md-6 col-sm-6">
-														<div class="single-footer-widget">
-																<h4>Newsletter</h4>
-																<p>Stay updated with my latest projects</p>
-								<div class="" id="mc_embed_signup">
-									 <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get">
-										<div class="input-group">
-											<input type="text" class="form-control" name="EMAIL" placeholder="Enter Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email Address '" required="" type="email">
-											<div class="input-group-btn">
-												<button class="btn btn-default" type="submit">
-													<span class="lnr lnr-arrow-right"></span>
-												</button>
 											</div>
-												<div class="info"></div>
-										</div>
-									</form>
+									</div>
+									<div class="col-lg-5 col-md-6 col-sm-6">
+											<div class="single-footer-widget">
+													<h4>Newsletter</h4>
+													<p>Stay updated with my latest projects</p>
+					<div class="" id="mc_embed_signup">
+						 <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get">
+							<div class="input-group">
+								<input type="text" class="form-control" name="EMAIL" placeholder="Enter Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email Address '" required="" type="email">
+								<div class="input-group-btn">
+									<button class="btn btn-default" type="submit">
+										<span class="lnr lnr-arrow-right"></span>
+									</button>
 								</div>
-														</div>
-												</div>
-												<div class="col-lg-2 col-md-6 col-sm-6 social-widget">
-														<div class="single-footer-widget">
-																<h4>Follow Me</h4>
-																<p>Let's be social</p>
-																<div class="footer-social d-flex align-items-center">
-																		<a href="https://www.facebook.com/harrison.jansma"><i class="fa fa-facebook"></i></a>
-																		<a href="http://www.linkedin.com/in/harrisonjansma"><i class="fa fa-linkedin"></i></a>
-																		<a href="https://github.com/harrisonjansma"><i class="fa fa-github"></i></a>
+									<div class="info"></div>
+							</div>
+						</form>
+					</div>
+											</div>
+									</div>
+									<div class="col-lg-2 col-md-6 col-sm-6 social-widget">
+											<div class="single-footer-widget">
+													<h4>Follow Me</h4>
+													<p>Let's be social. </p>
+													<div class="footer-social d-flex align-items-center">
+															<a href="https://www.facebook.com/harrison.jansma"><i class="fa fa-facebook"></i></a>
+															<a href="http://www.linkedin.com/in/harrisonjansma"><i class="fa fa-linkedin"></i></a>
+															<a href="https://github.com/harrisonjansma"><i class="fa fa-github"></i></a>
 
-																</div>
-														</div>
-												</div>
-										</div>
-								</div>
-						</footer>
-						<!-- End footer Area -->
+													</div>
+											</div>
+									</div>
+							</div>
+					</div>
+			</footer>
+			<!-- End footer Area -->
 
 			<script src="js/vendor/jquery-2.2.4.min.js"></script>
 			<script src="js/popper.min.js"></script>
