--- a/portfolio.html
+++ b/portfolio.html
@@ -32,26 +32,34 @@
 		</head>
 
 		<body>
-			<header id="header">
-				<div class="container main-menu">
-					<div class="row align-items-center justify-content-between d-flex">
-						<div class id="logo">
+		  <header id="header">
+		    <div class="container main-menu">
+		    	<div class="row align-items-center justify-content-between d-flex">
+			      <div class id="logo">
 							<a href="index.html"><h3>H. Jansma </h3></a>
 					 </div>
-						<nav id="nav-menu-container">
-							<ul class="nav-menu">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="about.html">About</a></li>
-								<li><a href="portfolio.html">Portfolio</a></li>
+			      <nav id="nav-menu-container">
+			        <ul class="nav-menu">
+			          <li><a href="index.html">Home</a></li>
+			          <li><a href="about.html">About</a></li>
 
 
-								<li><a href="contact.html">Contact</a></li>
+								<li class="menu-has-children"><a>Portfolio</a>
+			            <ul style="display: none;">
+		            	  <li><a href="portfolio.html">Featured Projects</a></li>
+										<li><a href="archive.html">Projects Archive</a></li>
+
+			            </ul>
+			          </li>
+
+
+			          <li><a href="contact.html">Contact</a></li>
 								</ul>
-							</ul>
-						</nav><!-- #nav-menu-container -->
-					</div>
-				</div>
-			</header><!-- #header -->
+			        </ul>
+			      </nav><!-- #nav-menu-container -->
+		    	</div>
+		    </div>
+		  </header><!-- #header -->
 
 			<!-- start banner Area -->
 			<section class="about-banner">
@@ -67,139 +75,139 @@
 				</div>
 			</section>
 			<!-- End banner Area -->
-				<!-- Start portfolio-area Area -->
-            <section class="portfolio-area section-gap" id="portfolio">
-                <div class="container">
-		            <div class="row d-flex justify-content-center">
-		                <div class="menu-content pb-70 col-lg-8">
-		                    <div class="title text-center">
-		                        <h1 class="mb-10">My Latest Projects</h1>
-		                        <p>Take a look at my recent work.</p>
-		                    </div>
-		                </div>
-		            </div>
+			<section class="portfolio-area section-gap" id="portfolio">
+					<div class="container">
+					<div class="row d-flex justify-content-center">
+							<div class="menu-content pb-30 col-lg-8">
+									<div class="title text-center">
+											<h1 class="mb-10">My Latest Projects</h1>
+											<p>Take a look at my recent work.</p>
+									</div>
+							</div>
+					</div>
 
-                    <div class="filters">
-                        <ul>
-                            <li class="active" data-filter="*">All</li>
-                            <li data-filter=".ComputerVision">Computer Vision</li>
-                            <li data-filter=".NLP">NLP</li>
-                            <li data-filter=".WebApps">Web Apps</li>
-                            <li data-filter=".DataScience">Data Science</li>
-                        </ul>
-                    </div>
+							<div class="filters">
+									<ul>
+											<li class="active" data-filter="*">All</li>
+											<li data-filter=".ComputerVision">Computer Vision</li>
+											<li data-filter=".NLP">NLP</li>
+											<li data-filter=".WebApps">Web Apps</li>
+											<li data-filter=".DataScience">Data Science</li>
+									</ul>
+							</div>
 
-                    <div class="filters-content">
-                        <div class="row grid">
-                            <div class="single-portfolio col-sm-4 all CV">
-                            	<div class="relative">
-	                            	<div class="thumb">
-	                            		<div class="overlay overlay-bg"></div>
-	                            		 <img class="image img-fluid" src="img/p1.jpg" alt="">
-	                            	</div>
-									<a href="img/p1.jpg" class="img-pop-up">
-									  <div class="middle">
-									    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
-									  </div>
-								</a>
-                            	</div>
-								<div class="p-inner">
-								    <h4>Global Average Pooling: Object Localization</h4>
-									<div class="cat">July 16, 2018</div>
-								</div>
-                            </div>
-                            <div class="single-portfolio col-sm-4 all CV">
-                            	<div class="relative">
-	                            	<div class="thumb">
-	                            		<div class="overlay overlay-bg"></div>
-	                            		 <img class="image img-fluid" src="img/p2.jpg" alt="">
-	                            	</div>
-									<a href="img/p2.jpg" class="img-pop-up">
-									  <div class="middle">
-									    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
-									  </div>
-								</a>
-                            	</div>
-								<div class="p-inner">
-								    <h4>2D Vinyl Design</h4>
-									<div class="cat">vector</div>
-								</div>
-                            </div>
-                            <div class="single-portfolio col-sm-4 all ui">
-                            	<div class="relative">
-	                            	<div class="thumb">
-	                            		<div class="overlay overlay-bg"></div>
-	                            		 <img class="image img-fluid" src="img/p3.jpg" alt="">
-	                            	</div>
-									<a href="img/p3.jpg" class="img-pop-up">
-									  <div class="middle">
-									    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
-									  </div>
-									</a>
+							<div class="filters-content">
+									<div class="row grid">
+											<div class="single-portfolio col-sm-4 all ComputerVision">
+												<div class="relative">
+													<div class="thumb">
+														<div class="overlay overlay-bg"></div>
+														 <img class="image img-fluid" src="img/hucklecover2.png" alt="">
+													</div>
+						<a href="GAP.html">
+							<div class="middle">
+								<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
+							</div>
+					</a>
+												</div>
+					<div class="p-inner">
+						<a href="GAP.html">
+							<h4>GAP: Object Localization</h4></a>
+						<div class="cat">July 16, 2018</div>
+					</div>
+											</div>
+											<div class="single-portfolio col-sm-4 all NLP">
+												<div class="relative">
+													<div class="thumb">
+														<div class="overlay overlay-bg"></div>
+														 <img class="image img-fluid" src="img/applesquare.jpg" alt="">
+													</div>
+						<a href="apple.html">
+							<div class="middle">
+								<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
+							</div>
+					</a>
+												</div>
+					<div class="p-inner">
+						<a href="apple.html">
+							<h4>Apple Sentiment Analysis</h4></a>
+						<div class="cat">June 20, 2018</div>
+					</div>
+											</div>
 
-	                           	</div>
-                                <div class="p-inner">
-                                    <h4>Creative Poster Design</h4>
-                                    <div class="cat">Agency</div>
-                                </div>
-                            </div>
-                            <div class="single-portfolio col-sm-4 all printing">
-                            	<div class="relative">
-	                            	<div class="thumb">
-	                            		<div class="overlay overlay-bg"></div>
-	                            		 <img class="image img-fluid" src="img/p4.jpg" alt="">
-	                            	</div>
-									<a href="img/p4.jpg" class="img-pop-up">
-									  <div class="middle">
-									    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
-									  </div>
-									</a>
-                            	</div>
-                                <div class="p-inner">
-                                    <h4>Embosed Logo Design</h4>
-                                    <div class="cat">Portal</div>
-                                </div>
-                            </div>
-                            <div class="single-portfolio col-sm-4 all vector">
-                            	<div class="relative">
-                            	<div class="thumb">
-	                            		<div class="overlay overlay-bg"></div>
-	                            		 <img class="image img-fluid" src="img/p5.jpg" alt="">
-	                            	</div>
-									<a href="img/p5.jpg" class="img-pop-up">
-									  <div class="middle">
-									    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
-									  </div>
-									</a>
-                            	</div>
-                                <div class="p-inner">
-                                    <h4>3D Helmet Design</h4>
-                                    <div class="cat">vector</div>
-                                </div>
-                            </div>
-                            <div class="single-portfolio col-sm-4 all raster">
-                            	<div class="relative">
-	                            	<div class="thumb">
-	                            		<div class="overlay overlay-bg"></div>
-	                            		 <img class="image img-fluid" src="img/p6.jpg" alt="">
-	                            	</div>
-									<a href="img/p6.jpg" class="img-pop-up">
-									  <div class="middle">
-									    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
-									  </div>
-									</a>
-                            	</div>
-                                <div class="p-inner">
-                                    <h4>2D Vinyl Design</h4>
-                                    <div class="cat">raster</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
 
-                </div>
-            </section>
-            <!-- End portfolio-area Area -->
+											<div class="single-portfolio col-sm-4 all NLP">
+												<div class="relative">
+													<div class="thumb">
+														<div class="overlay overlay-bg"></div>
+														 <img class="image img-fluid" src="img/gassquare.jpg" alt="">
+													</div>
+						<a href="toxic.html">
+							<div class="middle">
+								<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
+							</div>
+						</a>
+												</div>
+													<div class="p-inner">
+														<a href="toxic.html">
+															<h4>Toxic Topic Modelling</h4></a>
+															<div class="cat">June 13, 2018</div>
+													</div>
+											</div>
+
+
+											<div class="single-portfolio col-sm-4 all DataScience">
+												<div class="relative">
+													<div class="thumb">
+														<div class="overlay overlay-bg"></div>
+														 <img class="image img-fluid" src="img/clustering.png" alt="">
+													</div>
+						<a href="Clustering.html">
+							<div class="middle">
+								<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
+							</div>
+						</a>
+												</div>
+													<div class="p-inner">
+														<a href="Clustering.html">
+															<h4>Clustering Mental Health</h4></a>
+															<div class="cat">May 23, 2018</div>
+													</div>
+											</div>
+
+
+											<div class="single-portfolio col-sm-4 all DataScience">
+												<div class="relative">
+												<div class="thumb">
+														<div class="overlay overlay-bg"></div>
+														 <img class="image img-fluid" src="img/titanicsquare.jpg" alt="">
+													</div>
+						<a href="Titanic.html">
+							<div class="middle">
+								<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
+							</div>
+						</a>
+												</div>
+													<div class="p-inner">
+														<a href="Titanic.html">
+															<h4>Data Science Lifecycle</h4></a>
+															<div class="cat">May 3, 2018</div>
+													</div>
+											</div>
+
+									</div>
+							</div>
+
+					</div>
+
+					<div class="container text-right">
+					<a href="archive.html" class="primary-btn text-uppercase">Project Archive</a>
+				</div>
+			</section>
+			<!-- End portfolio-area Area -->
+
+
+
 
 						<!-- start footer Area -->
 						<footer class="footer-area section-gap">
