--- a/about.html
+++ b/about.html
@@ -238,29 +238,30 @@
 											<a href="" class="active">Why did you make this website?</a>
 										</dt>
 										<dd style="display: block;">
-										This is dummy answer.
+										I built this website to share my projects and motivations with others. In doing this, I hope to show my experience and interest in machine learning and web application development. As an added benefit of making this site, I was able to develop my front-end web design skill in setting the layout, as well as my back-end development skills by hosting this site on Digital Ocean.
+
 										</dd>
 
 										<dt>
 											<a href="">How long have you been practicing machine learning?</a>
 										</dt>
 										<dd style="display: none;">
-										Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis. leo quam aliquet diam, congue laoreet elit metus eget diam.
+										I discovered machine learning last year after graduating from Baylor University and moving to Plano, TX for a position as a business analyst. Since then I have immersed myself in the data science and machine learning research communities, learning about the mathematical and statistical foundations of the field, as well as implementing the algorithms in personal projects.
 										</dd>
 
 										<dt>
 											<a href="">Do you have any experience with database management?</a>
 										</dt>
 										<dd style="display: none;">
-										Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. Proin ac metus diam.
-										</dd>
+										Though I have had experience with scraping, cleaning, and storing datasets locally, I have not had exposure to any of the major database systems. I intend to work more with MongoDB and MySQL as soon as I come to a project that would benefit from having used these tools.
+																			</dd>
 
 
 										<dt>
 											<a href="">Why are you interested in computer vision / machine learning?</a>
 										</dt>
 										<dd style="display: none;">
-										Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. Proin ac metus diam.
+										Everyday I read another amazing Medium post about a business that was able to use machine learning or computer vision to provide value for their clients. However I still believe that the implementation of machine learning (especially computer vision) is still in its infancy, and as a result I want to work with the pioneers and makers that decide how we use this technology to make our world better.
 										</dd>
 
 
@@ -268,7 +269,7 @@
 											<a href="">What industry are you looking to work in?</a>
 										</dt>
 										<dd style="display: none;">
-										Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. Proin ac metus diam.
+										I am very interested in web application development. From the outside, I see complex and innovative systems that are made by people who see the value of learning, working hard, and rapidly improving their product and design.
 										</dd>
 
 
@@ -276,7 +277,7 @@
 										<a href="">How can I get in contact with you?</a>
 									</dt>
 									<dd style="display: none;">
-									Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. Proin ac metus diam.
+									Check out the contact page!
 									</dd>
 								</dl>
 
