--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 							<a href="portfolio.html" class="primary-btn text-uppercase">My Projects</a>
 						</div>
 						<div class="col-lg-6 col-md-6 banner-right d-flex align-self-end">
-							<img class="img-fluid" src="img/cover3.jpg" >
+							<img class="img-fluid" src="img/crop.jpg" >
 						</div>
 					</div>
 				</div>
