--- a/about.html
+++ b/about.html
@@ -77,8 +77,9 @@
 			<!-- End banner Area -->
 
 			<!-- Start home-about Area -->
-			<section class="home-about-area section-gap">
+
 				<div class="container">
+					<div class="section-top-border">
 					<div class="row align-items-center justify-content-between">
 						<div class="col-lg-6 col-md-6 home-about-left">
 							<img class="img-fluid" src="img/crop.jpg" alt="">
@@ -89,24 +90,24 @@
 							<p>
 								I want to build amazing things. I fit the pieces together to make connectable machine learning models that make web applications smarter.
 							</p>
-							<a href="#" class="primary-btn text-uppercase">View Full Details</a>
+							<a href="#FAQ" class="primary-btn text-uppercase">More About Me</a>
 						</div>
 						<div class="col-lg-12 pt-60">
 							<p>
-								I am passionate about applying new technologies to create amazing things. Siri, Google Assistant, and Amazon Alexa are all examples of what dedicated and curious people can achieve in the dizzying advancements of our time.
+								I am currently a graduate student at University of Texas at Dallas studying Computer Science. After graduating with honors from Baylor University with a bachelors in mathematics and business, I moved to Plano, Texas. Since then I have been on a self guided curriculum, learning about machine learning algorithms, computer vision, and software architecture.
 							</p>
 							<p>
-								With a strong understanding of mathematics and rich experiences with Natural Language Processing, I aim to be a part of the team of makers and innovators. To see more of my experience working with NLP and deep learning, visit my Projects page. For a description of my academic achievements and publications, visit Education.
+								I am currently focusing my studies on recent advancements in computer vision utilizing deep learning. Particularly the use of convolutional neural networks for video understanding. Over the next few months I hope to implement convnets in RESTful web services and drone flight control programs.
 							</p>
 
 						</div>
 					</div>
-
+				</div>
 
 					<hr>
 
 
-					<div class="section-top-border">
+				<section class="faq-area pb-80 pt-80">
 							<div class="text-center">
 									<div class="menu-content pb-40">
 											<div class="title text-center">
@@ -118,68 +119,87 @@
 
 
 
-
-
-
-
-
 					<div class="row skillbar-wraps">
-						<div class="col-lg-6 skill-left">
+						<div class="col-lg-4 skill-left">
+							<h4 class="text-center"> Devops </h4>
 							<div class="single-skill">
 								<p>
-									Python 90%
+									Server Management (Linux, SSH, etc.) 60%
 								</p>
-								<div class="skill" data-width="90"></div>
+								<div class="skill" data-width="60"></div>
 							</div>
 							<div class="single-skill">
 								<p>
-									Tensorflow / Scikit-Learn 80%
-								</p>
-								<div class="skill" data-width="80"></div>
-							</div>
-							<div class="single-skill">
-								<p>
-									JavaScript / HTML / CSS 50%
+									Containerization (Docker) 50%
 								</p>
 								<div class="skill" data-width="50"></div>
 							</div>
-
+							<div class="single-skill">
+								<p>
+									Cluster Computing (Spark, Hive, etc.) 20%
+								</p>
+								<div class="skill" data-width="20"></div>
+							</div>
 						</div>
 
 
-						<div class="col-lg-6 skill-right">
+						<div class="col-lg-4 skill-right">
+							<h4 class="text-center"> Data Science </h4>
 							<div class="single-skill">
 								<p>
-									GitHub 85%
+									Python 85%
 								</p>
 								<div class="skill" data-width="85"></div>
 							</div>
 
 							<div class="single-skill">
 								<p>
-									Linux 70%
+									ML Frameworks (Tensorflow, Scikit Learn, etc.) 70%
 								</p>
 								<div class="skill" data-width="70"></div>
 							</div>
 							<div class="single-skill">
 								<p>
-									Docker 60%
+									Data Processing and Visualizations 80%
 								</p>
-								<div class="skill" data-width="60"></div>
+								<div class="skill" data-width="80"></div>
+							</div>
+						</div>
+
+						<div class="col-lg-4 skill-right">
+							<h4 class="text-center">Front-end Development</h4>
+							<div class="single-skill">
+								<p>
+									HTML / CSS 50%
+								</p>
+								<div class="skill" data-width="50"></div>
+							</div>
+
+							<div class="single-skill">
+								<p>
+									Bootstrap 20%
+								</p>
+								<div class="skill" data-width="20"></div>
+							</div>
+							<div class="single-skill">
+								<p>
+									JavaScript 20%
+								</p>
+								<div class="skill" data-width="20"></div>
 							</div>
 						</div>
 
 					</div>
-				</div>
-				</div>
-			</section>
+				</section>
+
+
+
 
 			<!-- End home-about Area -->
 <hr>
-<br>
 
 			<!-- Start timeline Area -->
-			<section class="timeline pb-120">
+			<section class="timeline pt-80 pb-80">
             <div class="text-center">
                 <div class="menu-content pb-40">
                     <div class="title text-center">
@@ -216,13 +236,15 @@
 			        <p>Expected graduation: Fall 2019</p>
 			      </div>
 			    </li>
+					<br>
 			  </ul>
 			</section>
-			<hr>
+			<hr id="FAQ">
+			<br>
 			<br>
 
 			<!-- End timeline Area -->
-			<section class="faq-area pb-120">
+			<section class="faq-area pb-80 pt-60">
 							<div class="container">
 								<div class="row d-flex justify-content-center">
 									<div class="menu-content pb-40 col-lg-8">
@@ -246,7 +268,7 @@
 											<a href="">How long have you been practicing machine learning?</a>
 										</dt>
 										<dd style="display: none;">
-										I discovered machine learning last year after graduating from Baylor University and moving to Plano, TX for a position as a business analyst. Since then I have immersed myself in the data science and machine learning research communities, learning about the mathematical and statistical foundations of the field, as well as implementing the algorithms in personal projects.
+										I discovered machine learning a year ago after graduating from Baylor University. Since then I have immersed myself in the data science and machine learning communities. Spending the last few months learning about the mathematical and statistical foundations of the field, as well as implementing the algorithms in personal projects.
 										</dd>
 
 										<dt>
@@ -261,7 +283,7 @@
 											<a href="">Why are you interested in computer vision / machine learning?</a>
 										</dt>
 										<dd style="display: none;">
-										Everyday I read another amazing Medium post about a business that was able to use machine learning or computer vision to provide value for their clients. However I still believe that the implementation of machine learning (especially computer vision) is still in its infancy, and as a result I want to work with the pioneers and makers that decide how we use this technology to make our world better.
+										Everyday I read a new Medium post about a business that was able to use machine learning or computer vision to provide value for their clients. Despite the movement towards integrating AI into existing technologies, the implementation of machine learning (especially computer vision) is still in its infancy. This field is the wildwest, and I want to work with the pioneers and innovators that create new and amazing things.
 										</dd>
 
 
@@ -269,15 +291,15 @@
 											<a href="">What industry are you looking to work in?</a>
 										</dt>
 										<dd style="display: none;">
-										I am very interested in web application development. From the outside, I see complex and innovative systems that are made by people who see the value of learning, working hard, and rapidly improving their product and design.
+										I am very interested in web application development. I am drawn towards the industry's focus on rapid improvement, innovation, and team-oriented creativity. Furthermore, I think when it comes to improving existing technologies there is a great deal of low-hanging fruit to be reached thanks to the movement towards microservices and docker containerization.
 										</dd>
 
 
 									<dt>
-										<a href="">How can I get in contact with you?</a>
+										<a href=""> What kind of work do you see yourself doing? </a>
 									</dt>
 									<dd style="display: none;">
-									Check out the contact page!
+									I am interested in building modular machine learning applications that can communicate with the backend architectures of existing applications. The titles for these positions are often very vague, so I like to describe my perfect future position to be a mix of data science, machine learning engineering, and devops. Essentially a computer vision specialist with the skills to deploy a model application to production.
 									</dd>
 								</dl>
 
@@ -286,58 +308,60 @@
 							</div>
 						</section>
 
+</div>
 
 
-				<!-- start footer Area -->
-				<footer class="footer-area section-gap">
-						<div class="container">
-								<div class="row">
-										<div class="col-lg-5 col-md-6 col-sm-6">
-												<div class="single-footer-widget">
-														<h4>About Me</h4>
-														<p>
-																Passionate about computer vision, web app design, and making amazing things. I love to learn, and have a 2 year old german shephard.
-														</p>
-														<p class="footer-text"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+						<!-- start footer Area -->
+						<footer class="footer-area section-gap">
+								<div class="container">
+										<div class="row">
+												<div class="col-lg-5 col-md-6 col-sm-6">
+														<div class="single-footer-widget">
+																<h4>About This Page</h4>
+																<p class="footer-text">
+																		This website was coded in HTML, CSS, and Javascript based on a theme from Colorlib. It is hosted on a LAMP server from DigitalOcean. The code can be found <a href="https://github.com/harrisonjansma/cv-website" target="_blank"> here.</a>
+																</p>
+																<p class="footer-text"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+			Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+			<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+														</div>
 												</div>
+												<div class="col-lg-5 col-md-6 col-sm-6">
+														<div class="single-footer-widget">
+																<h4>Newsletter</h4>
+																<p>Stay updated with my latest projects</p>
+								<div class="" id="mc_embed_signup">
+									 <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get">
+										<div class="input-group">
+											<input type="text" class="form-control" name="EMAIL" placeholder="Enter Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email Address '" required="" type="email">
+											<div class="input-group-btn">
+												<button class="btn btn-default" type="submit">
+													<span class="lnr lnr-arrow-right"></span>
+												</button>
+											</div>
+												<div class="info"></div>
 										</div>
-										<div class="col-lg-5 col-md-6 col-sm-6">
-												<div class="single-footer-widget">
-														<h4>Newsletter</h4>
-														<p>Stay updated with my latest projects</p>
-						<div class="" id="mc_embed_signup">
-							 <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get">
-								<div class="input-group">
-									<input type="text" class="form-control" name="EMAIL" placeholder="Enter Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email Address '" required="" type="email">
-									<div class="input-group-btn">
-										<button class="btn btn-default" type="submit">
-											<span class="lnr lnr-arrow-right"></span>
-										</button>
-									</div>
-										<div class="info"></div>
+									</form>
 								</div>
-							</form>
-						</div>
+														</div>
 												</div>
-										</div>
-										<div class="col-lg-2 col-md-6 col-sm-6 social-widget">
-												<div class="single-footer-widget">
-														<h4>Follow Me</h4>
-														<p>Let's be social</p>
-														<div class="footer-social d-flex align-items-center">
-																<a href="https://www.facebook.com/harrison.jansma"><i class="fa fa-facebook"></i></a>
-																<a href="http://www.linkedin.com/in/harrisonjansma"><i class="fa fa-linkedin"></i></a>
-																<a href="https://github.com/harrisonjansma"><i class="fa fa-github"></i></a>
+												<div class="col-lg-2 col-md-6 col-sm-6 social-widget">
+														<div class="single-footer-widget">
+																<h4>Follow Me</h4>
+																<p>Let's be social. </p>
+																<div class="footer-social d-flex align-items-center">
+																		<a href="https://www.facebook.com/harrison.jansma"><i class="fa fa-facebook"></i></a>
+																		<a href="http://www.linkedin.com/in/harrisonjansma"><i class="fa fa-linkedin"></i></a>
+																		<a href="https://github.com/harrisonjansma"><i class="fa fa-github"></i></a>
 
+																</div>
 														</div>
 												</div>
 										</div>
 								</div>
-						</div>
-				</footer>
-				<!-- End footer Area -->
+						</footer>
+						<!-- End footer Area -->
+
 
 			<script src="js/vendor/jquery-2.2.4.min.js"></script>
 			<script src="js/popper.min.js"></script>
@@ -356,6 +380,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<script src="js/simple-skillbar.js"></script>
 			<script src="js/owl.carousel.min.js"></script>
 			<script src="js/mail-script.js"></script>
+			<script src="js/scroll.js"></script>
 			<script src="js/main.js"></script>
 
 
