--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 							<p>
 								Machine learning, backend development, and computer vision specialist.
 							</p>
-							<a href="portfolio.html" class="primary-btn text-uppercase">My Projects</a>
+
+							<a href="#portfolio" class="primary-btn text-uppercase">My Projects</a>
 						</div>
 						<div class="col-lg-6 col-md-6 banner-right d-flex align-self-end">
 							<img class="img-fluid" src="img/crop.jpg" >
@@ -92,10 +93,7 @@
 							<br>
 
 							<blockquote class="generic-blockquote">
-								<p>I am passionate about applying new technologies to create amazing things. Siri, Google Assistant, and Amazon Alexa are all examples of what dedicated and curious people can achieve in the dizzying advancements of our time.
-								</p>
-								<p>
-								With a strong understanding of mathematics and rich experiences with Natural Language Processing, I aim to be a part of the team of makers and innovators. To see more of my experience working with NLP and deep learning, visit my Projects page. For a description of my academic achievements and publications, visit Education.
+								<p>I am passionate about applying new technologies to create amazing things. Siri, Google Assistant, and Amazon Alexa are all examples of what dedicated and curious people can achieve in the dizzying advancements of our time. With a strong understanding of mathematics and rich experiences in computer vision, I aim to be a part of the team of makers and innovators.
 							</p>
 							</blockquote>
 							<a href="about.html" class="primary-btn text-uppercase">About me</a>
@@ -204,53 +202,77 @@
 
 <div class="container">
 
-<div class="row skillbar-wraps">
-	<div class="col-lg-6 skill-left">
-		<div class="single-skill">
-			<p>
-				Python 90%
-			</p>
-			<div class="skill" data-width="90"></div>
+	<div class="row skillbar-wraps">
+		<div class="col-lg-4 skill-left">
+			<h4 class="text-center"> Devops </h4>
+			<div class="single-skill">
+				<p>
+					Server Management (Linux, SSH, etc.) 60%
+				</p>
+				<div class="skill" data-width="60"></div>
+			</div>
+			<div class="single-skill">
+				<p>
+					Containerization (Docker) 50%
+				</p>
+				<div class="skill" data-width="50"></div>
+			</div>
+			<div class="single-skill">
+				<p>
+					Cluster Computing (Spark, Hive, etc.) 20%
+				</p>
+				<div class="skill" data-width="20"></div>
+			</div>
 		</div>
-		<div class="single-skill">
-			<p>
-				Tensorflow / Scikit-Learn 80%
-			</p>
-			<div class="skill" data-width="80"></div>
+
+
+		<div class="col-lg-4 skill-right">
+			<h4 class="text-center"> Data Science </h4>
+			<div class="single-skill">
+				<p>
+					Python 85%
+				</p>
+				<div class="skill" data-width="85"></div>
+			</div>
+
+			<div class="single-skill">
+				<p>
+					ML Frameworks (Tensorflow, Scikit Learn, etc.) 70%
+				</p>
+				<div class="skill" data-width="70"></div>
+			</div>
+			<div class="single-skill">
+				<p>
+					Data Processing and Visualizations 80%
+				</p>
+				<div class="skill" data-width="80"></div>
+			</div>
 		</div>
-		<div class="single-skill">
-			<p>
-				JavaScript / HTML / CSS 50%
-			</p>
-			<div class="skill" data-width="50"></div>
+
+		<div class="col-lg-4 skill-right">
+			<h4 class="text-center">Front-end Development</h4>
+			<div class="single-skill">
+				<p>
+					HTML / CSS 50%
+				</p>
+				<div class="skill" data-width="50"></div>
+			</div>
+
+			<div class="single-skill">
+				<p>
+					Bootstrap 20%
+				</p>
+				<div class="skill" data-width="20"></div>
+			</div>
+			<div class="single-skill">
+				<p>
+					JavaScript 20%
+				</p>
+				<div class="skill" data-width="20"></div>
+			</div>
 		</div>
 
 	</div>
-
-
-	<div class="col-lg-6 skill-right">
-		<div class="single-skill">
-			<p>
-				GitHub 85%
-			</p>
-			<div class="skill" data-width="85"></div>
-		</div>
-
-		<div class="single-skill">
-			<p>
-				Linux 70%
-			</p>
-			<div class="skill" data-width="70"></div>
-		</div>
-		<div class="single-skill">
-			<p>
-				Docker 60%
-			</p>
-			<div class="skill" data-width="60"></div>
-		</div>
-	</div>
-
-</div>
 
 </section>
 
@@ -396,9 +418,9 @@
 							<div class="row">
 									<div class="col-lg-5 col-md-6 col-sm-6">
 											<div class="single-footer-widget">
-													<h4>About Me</h4>
-													<p>
-															Passionate about computer vision, web app design, and making amazing things. I love to learn, and have a 2 year old german shephard.
+													<h4>About This Page</h4>
+													<p class="footer-text">
+															This website was coded in HTML, CSS, and Javascript based on a theme from Colorlib. It is hosted on a LAMP server from DigitalOcean. The code can be found <a href="https://github.com/harrisonjansma/cv-website" target="_blank"> here.</a>
 													</p>
 													<p class="footer-text"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
@@ -441,6 +463,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			</footer>
 			<!-- End footer Area -->
 
+
 			<script src="js/vendor/jquery-2.2.4.min.js"></script>
 			<script src="js/popper.min.js"></script>
 			<script src="js/vendor/bootstrap.min.js"></script>
@@ -458,6 +481,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<script src="js/simple-skillbar.js"></script>
 			<script src="js/owl.carousel.min.js"></script>
 			<script src="js/mail-script.js"></script>
+			<script src="js/scroll.js"></script>
 			<script src="js/main.js"></script>
 		</body>
 	</html>
