--- a/portfolio.html
+++ b/portfolio.html
@@ -208,57 +208,56 @@
 
 
 
-
-						<!-- start footer Area -->
-						<footer class="footer-area section-gap">
-								<div class="container">
-										<div class="row">
-												<div class="col-lg-5 col-md-6 col-sm-6">
-														<div class="single-footer-widget">
-																<h4>About Me</h4>
-																<p>
-																		Passionate about computer vision, web app design, and making amazing things. I love to learn, and have a 2 year old german shephard.
-																</p>
-																<p class="footer-text"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+			<!-- start footer Area -->
+			<footer class="footer-area section-gap">
+					<div class="container">
+							<div class="row">
+									<div class="col-lg-5 col-md-6 col-sm-6">
+											<div class="single-footer-widget">
+													<h4>About This Page</h4>
+													<p class="footer-text">
+															This website was coded in HTML, CSS, and Javascript based on a theme from Colorlib. It is hosted on a LAMP server from DigitalOcean. The code can be found <a href="https://github.com/harrisonjansma/cv-website" target="_blank"> here.</a>
+													</p>
+													<p class="footer-text"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-														</div>
-												</div>
-												<div class="col-lg-5 col-md-6 col-sm-6">
-														<div class="single-footer-widget">
-																<h4>Newsletter</h4>
-																<p>Stay updated with my latest projects</p>
-								<div class="" id="mc_embed_signup">
-									 <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get">
-										<div class="input-group">
-											<input type="text" class="form-control" name="EMAIL" placeholder="Enter Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email Address '" required="" type="email">
-											<div class="input-group-btn">
-												<button class="btn btn-default" type="submit">
-													<span class="lnr lnr-arrow-right"></span>
-												</button>
 											</div>
-												<div class="info"></div>
-										</div>
-									</form>
+									</div>
+									<div class="col-lg-5 col-md-6 col-sm-6">
+											<div class="single-footer-widget">
+													<h4>Newsletter</h4>
+													<p>Stay updated with my latest projects</p>
+					<div class="" id="mc_embed_signup">
+						 <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get">
+							<div class="input-group">
+								<input type="text" class="form-control" name="EMAIL" placeholder="Enter Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email Address '" required="" type="email">
+								<div class="input-group-btn">
+									<button class="btn btn-default" type="submit">
+										<span class="lnr lnr-arrow-right"></span>
+									</button>
 								</div>
-														</div>
-												</div>
-												<div class="col-lg-2 col-md-6 col-sm-6 social-widget">
-														<div class="single-footer-widget">
-																<h4>Follow Me</h4>
-																<p>Let's be social. </p>
-																<div class="footer-social d-flex align-items-center">
-																		<a href="https://www.facebook.com/harrison.jansma"><i class="fa fa-facebook"></i></a>
-																		<a href="http://www.linkedin.com/in/harrisonjansma"><i class="fa fa-linkedin"></i></a>
-																		<a href="https://github.com/harrisonjansma"><i class="fa fa-github"></i></a>
+									<div class="info"></div>
+							</div>
+						</form>
+					</div>
+											</div>
+									</div>
+									<div class="col-lg-2 col-md-6 col-sm-6 social-widget">
+											<div class="single-footer-widget">
+													<h4>Follow Me</h4>
+													<p>Let's be social. </p>
+													<div class="footer-social d-flex align-items-center">
+															<a href="https://www.facebook.com/harrison.jansma"><i class="fa fa-facebook"></i></a>
+															<a href="http://www.linkedin.com/in/harrisonjansma"><i class="fa fa-linkedin"></i></a>
+															<a href="https://github.com/harrisonjansma"><i class="fa fa-github"></i></a>
 
-																</div>
-														</div>
-												</div>
-										</div>
-								</div>
-						</footer>
-						<!-- End footer Area -->
+													</div>
+											</div>
+									</div>
+							</div>
+					</div>
+			</footer>
+			<!-- End footer Area -->
 
 			<script src="js/vendor/jquery-2.2.4.min.js"></script>
 			<script src="js/popper.min.js"></script>
