--- a/contact.html
+++ b/contact.html
@@ -136,15 +136,16 @@
 			</section>
 			<!-- End contact-page Area -->
 
+
 			<!-- start footer Area -->
 			<footer class="footer-area section-gap">
 					<div class="container">
 							<div class="row">
 									<div class="col-lg-5 col-md-6 col-sm-6">
 											<div class="single-footer-widget">
-													<h4>About Me</h4>
-													<p>
-															Passionate about computer vision, web app design, and making amazing things. I love to learn, and have a 2 year old german shephard.
+													<h4>About This Page</h4>
+													<p class="footer-text">
+															This website was coded in HTML, CSS, and Javascript based on a theme from Colorlib. It is hosted on a LAMP server from DigitalOcean. The code can be found <a href="https://github.com/harrisonjansma/cv-website" target="_blank"> here.</a>
 													</p>
 													<p class="footer-text"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
@@ -173,7 +174,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<div class="col-lg-2 col-md-6 col-sm-6 social-widget">
 											<div class="single-footer-widget">
 													<h4>Follow Me</h4>
-													<p>Let's be social</p>
+													<p>Let's be social. </p>
 													<div class="footer-social d-flex align-items-center">
 															<a href="https://www.facebook.com/harrison.jansma"><i class="fa fa-facebook"></i></a>
 															<a href="http://www.linkedin.com/in/harrisonjansma"><i class="fa fa-linkedin"></i></a>
